--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 body{
-  background-color:rgb(239, 226, 239);
+  background-color: rgb(254, 227, 254);
   font-family:  "Roboto", sans-serif;
 }
 a{
@@ -57,19 +57,24 @@ main{
   color: #f65282;
 }
 .weather-app-icon{
+  width: 88px;
+  height: 88px;
   font-size: 44px;
-  margin-top: 22px;
+  margin-top: 12px;
+  line-height: 88px;
 }
 .weather-app-temperature-container{
   display: flex;
 }
 .weather-app-temperature{
   font-size: 88px;
+  line-height: 88px;
+  margin-left: 0;
   font-weight: bold;
-  margin-left: 5px;
 }
 .weather-app-unit{
   margin-top: 16px;
+  margin-top: 6px;
   font-size: 28px;
 }
 footer{
