--- a/src/style.css
+++ b/src/style.css
@@ -56,6 +56,20 @@ main{
 .weather-app-details strong{
   color: #f65282;
 }
+.weather-forecast{
+  margin-top: 20px;
+  text-align: center;
+}
+.weather-forecast-date{
+  font-size: 16px;
+  opacity: 0.5;
+}
+.weather-forecast-temperature{
+  font-size: 13px;
+}
+.weather-forecast-temperature-min{
+  opacity: 0.5;
+}
 .weather-app-icon{
   width: 88px;
   height: 88px;
