added the image instead of icon emoji

--- a/src/style.css
+++ b/src/style.css
@@ -73,7 +73,7 @@ main{
 .weather-app-temperature{
   font-size: 88px;
   line-height: 88px;
-  margin-left: 0;
+  margin-left: 0 px;
   font-weight: bold;
 }
 .weather-app-unit{
