--- a/src/style.css
+++ b/src/style.css
@@ -81,6 +81,34 @@ main{
   margin-top: 6px;
   font-size: 28px;
 }
+.weather-forecast{
+  display: flex;
+  justify-content: space-around;
+  margin-top: 30px;
+}
+.weather-forecast-date{
+  text-align: center;
+  color: rgba(39, 33,66, 0.4);
+  font-size: 16px;
+  line-height: 20px;
+  margin-bottom: 10px;
+}
+.weather-forecast-icon{
+  width: 88px;
+  height: 88px;
+  display: block;
+  margin: auto;
+}
+.weather-forecast-temperatures{
+  text-align: center;
+  color: #f65282;
+  margin-top: 10px;
+  display: flex;
+  justify-self: center;
+}
+.weather-forecast-temperature{
+  padding: 0 10px 30px;
+}
 footer{
   border-top: 1px solid rgb(238, 187, 238);
   padding:30px 0 0 0 ;
